[tool]
[tool.poetry]
name = "qsbi.backend.sql"
version = "0.1.0"
homepage = "https://github.com/giacinti-com/qsbi.backend.sql"
description = "QSBI SQL backend."
authors = ["Philippe Giacinti <philippe@giacinti.com>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "qsbi/backend/sql" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bump2version = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.41"}
alembic = "^1.8.1"
pydantic = "^1.10.2"
aiosqlite = "^0.17.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
isort = "^5.10.1"

pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.19.0"

mypy = "^0.982"

tox = "^3.26.0"
sphinx = "^5.2.3"
sqlalchemy = {extras = ["mypy"], version = "^1.4.41"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = '-v --cov=qsbi.backend.sql'
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
exclude = ['docs']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
